# libatapp

./: .gitignore  CMakeLists.txt  README.md  libatapp-config.cmake.in
binding/c/: CMakeLists.txt
binding/c/atframe/: libatapp_c.cpp  libatapp_c.h
include/: include.macro.cmake
include/atframe/: atapp.h  atapp_conf.h  atapp_log_sink_maker.h  atapp_module_impl.h  atapp_version.h.in
sample/: CMakeLists.txt  sample_echo_svr.cpp
sample/sample_etc/: sample_echo_svr.conf  sample_echo_svr.start.sh
src/: CMakeLists.txt
src/atframe/: atapp.cpp  atapp_log_sink_maker.cpp  atapp_module_impl.cpp
tools/: CMakeLists.txt  atappctl.cpp
