

EchoWithColor(COLOR GREEN "-- Configure ${CMAKE_CURRENT_LIST_DIR}")

set (PROJECT_LIB_LINK atapp)
set (PROJECT_LIBATAPP_ROOT_SRC_DIR ${CMAKE_CURRENT_LIST_DIR})
include_directories(${PROJECT_LIBATAPP_ROOT_SRC_DIR})

file(RELATIVE_PATH PROJECT_ROOT_RELINC_DIR ${CMAKE_CURRENT_LIST_DIR} ${PROJECT_LIBATAPP_ROOT_INC_DIR})

file(GLOB_RECURSE PROJECT_LIB_SRC_LIST
    ${PROJECT_ROOT_RELINC_DIR}/*.h
    ${PROJECT_ROOT_RELINC_DIR}/*.hpp
    ${PROJECT_ROOT_RELINC_DIR}/*.hxx
    ${PROJECT_LIBATAPP_ROOT_SRC_DIR}/*.h
    ${PROJECT_LIBATAPP_ROOT_SRC_DIR}/*.hpp
    ${PROJECT_LIBATAPP_ROOT_SRC_DIR}/*.c
    ${PROJECT_LIBATAPP_ROOT_SRC_DIR}/*.cpp
    ${PROJECT_LIBATAPP_ROOT_SRC_DIR}/*.cc
    ${PROJECT_LIBATAPP_ROOT_SRC_DIR}/*.cxx
)
source_group_by_dir(PROJECT_LIB_SRC_LIST)


# ================ multi thread ================
if ( NOT MSVC )
    add_definitions(-D_POSIX_MT_)
endif()

# ============ libatbus - src ============
add_library(${PROJECT_LIB_LINK} STATIC ${PROJECT_LIB_SRC_LIST})

add_library("${PROJECT_LIB_LINK}_packed" STATIC 
    ${PROJECT_LIB_SRC_LIST}
    ${PROJECT_3RD_PARTY_SRC_LIST}
)

target_link_libraries("${PROJECT_LIB_LINK}_packed"
    ${3RD_PARTY_LIBATBUS_LINK_NAME}
    ${3RD_PARTY_ATFRAME_UTILS_LINK_NAME}
    ${3RD_PARTY_LIBUV_LINK_NAME}
    ${ATAPP_PACKED_ADDTIONAL_LIBS}
    ${COMPILER_OPTION_EXTERN_CXX_LIBS}
)

install(TARGETS ${PROJECT_LIB_LINK} "${PROJECT_LIB_LINK}_packed"
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(DIRECTORY ${PROJECT_LIBATAPP_ROOT_INC_DIR}
    DESTINATION .
    FILES_MATCHING REGEX ".+\\.h(pp)?$"
    PATTERN ".svn" EXCLUDE
    PATTERN ".git" EXCLUDE
)
